Changed the hover-text to WOOHOO

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     function () {
         $(this).css("color", "blue");
         $(this).css("background-color", "yellow");
-        $(this).css("text-align", "center")
+        $(this).css("text-align", "center");
+        $(this).text("WOOHOO")
     },
     function () { // restore
         $(this).css("color", "black");
         $(this).css("background-color", "white");
-        $(this).css("text-align", "left")
+        $(this).css("text-align", "left");
+        $(this).text("Beweeg de muis over mij! :-)")
     }
   );
 </script>
